# dl-plus

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dl-plus.spec  justfile  pyproject.toml  requirements.dev.txt  setup.cfg  tox.ini
.github/: FUNDING.yml
docs/: available-extractor-plugins.md  extractor-plugin-authoring-guide.md
scripts/: build_nix_executable.py  build_pyz.py  build_win_executable.py
src/dl_plus/: __main__.py  backend.py  cli.py  config.py  const.py  core.py  deprecated.py  exceptions.py  extractor.py  pypi.py  utils.py  ytdl.py
src/dl_plus/backend/: __init__.py  backend.py
src/dl_plus/cli/: __init__.py  args.py  cli.py  command.py
src/dl_plus/cli/commands/: __init__.py  base.py
src/dl_plus/cli/commands/backend/: __init__.py  base.py  info.py  install.py  list.py  uninstall.py  update.py
src/dl_plus/cli/commands/config/: __init__.py
src/dl_plus/cli/commands/config/show/: __init__.py  backends.py  main.py
src/dl_plus/cli/commands/extractor/: __init__.py  base.py  install.py  list.py  uninstall.py  update.py
src/dl_plus/extractor/: __init__.py  extractor.py  machinery.py  peqn.py  plugin.py
src/dlplus/: cli.py  core.py  exceptions.py
tests/: conftest.py  testlib.py
tests/cli/: test_detect_compat_mode.py
tests/config/: conftest.py  test_config_load.py  test_get_config_home.py  test_get_config_path.py  test_get_data_home.py
tests/core/: test_get_extractors.py
tests/extractor/: test_peqn.py  test_plugin.py
tests/ytdl/: test_extractors_registry.py
