[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'dl-plus'
description = 'A youtube-dl extension with pluggable extractors'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
    {name = 'Dmitry Meyer', email = 'me@undef.im'},
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>= 3.8'
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/dl-plus'
Repository = 'https://github.com/un-def/dl-plus.git'
Changelog = 'https://github.com/un-def/dl-plus/blob/master/CHANGELOG.md'
Issues = 'https://github.com/un-def/dl-plus/issues'

[project.scripts]
dl-plus = 'dl_plus.cli:main'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 'dl_plus.const.DL_PLUS_VERSION'}

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'TESTS', 'LOCALFOLDER']
known_tests = ['tests']
skip_glob = ['.*']

[tool.mypy]
mypy_path = '${MYPY_CONFIG_FILE_DIR}/src'
packages = 'dl_plus'
python_version = '3.8'   # the lowest Python version we support
namespace_packages = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--strict-markers'
testpaths = ['tests']
markers = [
    'extractors',
]
