[metadata]
name = dl-plus
version = attr: dl_plus.const.DL_PLUS_VERSION
author = un.def
author_email = me@undef.im

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    youtube-dl
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
include =
    dl_plus
    dl_plus.extractor

[options.entry_points]
console_scripts =
    dl-plus = dl_plus.cli:main
