[metadata]
name = dl-plus
version = attr: dl_plus.const.DL_PLUS_VERSION
description = A youtube-dl extension with pluggable extractors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un-def/dl-plus
author = un.def
author_email = me@undef.im
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
python_requires = >=3.6
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
include =
    dl_plus
    dl_plus.extractor

[options.entry_points]
console_scripts =
    dl-plus = dl_plus.cli:main
